text_alignment fixed

--- a/style.css
+++ b/style.css
@@ -20,20 +20,23 @@ html{
 }
 
 h1 {
+  text-align: center;
   color: white;
   font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
   letter-spacing: 2px;
 }
 h3{
+  text-align: center;
   font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
   font-size: 20px;
 }
 
 
-p{
+ul{
+  text-align: center;
   font-family: 'Avant Garde', Avantgarde, 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
   font-size: 14px;
-  
+
 }
 section {
   color: white;
@@ -43,6 +46,7 @@ section {
 }
 
 aside {
+  text-align: right;
   top: 50px;
   margin: 0 1.5%;
   width: 30%;
